ir-dump: refact dumpInstruction